# champollion_pipeline

./: .coverage  .dockerignore  .flake8  .gitignore  .gitmodules  README.md  README_Neurospin.md  README_old.md  README_two_environments.md  install.py  main.py  morphologist_graphs_generator.py  pipeline_loop_2mm.json  pixi.toml  pyproject.toml  pytest.ini  reference.yaml  ruff.toml  setup.py  sulci_regions_champollion_V1.json  uninstall.py  unistall.py
.github/: Dockerfile.base  dependabot.yml
docs/: index.html  workflow.md
reference_data/: umap_FCLp-subsc-FCLa-INSULA_left_coords.npy  umap_FCLp-subsc-FCLa-INSULA_right_coords.npy  umap_FCMpost-SpC_left_coords.npy  umap_FCMpost-SpC_right_coords.npy  umap_FColl-SRh_left_coords.npy  umap_FColl-SRh_right_coords.npy  umap_FIP-FIPPoCinf_left_coords.npy  umap_FIP-FIPPoCinf_right_coords.npy  umap_FPO-SCu-ScCal_left_coords.npy  umap_FPO-SCu-ScCal_right_coords.npy  umap_Lobule_parietal_sup_left_coords.npy  umap_Lobule_parietal_sup_right_coords.npy  umap_OCCIPITAL_left_coords.npy  umap_OCCIPITAL_right_coords.npy  umap_SC-SPeC_left_coords.npy  umap_SC-SPeC_right_coords.npy  umap_SC-SPoC_left_coords.npy  umap_SC-SPoC_right_coords.npy  umap_SC-sylv_left_coords.npy  umap_SC-sylv_right_coords.npy  umap_SCall-SsP-SintraCing_left_coords.npy  umap_SCall-SsP-SintraCing_right_coords.npy  umap_SCall_left_coords.npy  umap_SCall_right_coords.npy  umap_SFinf-BROCA-SPeCinf_left_coords.npy  umap_SFinf-BROCA-SPeCinf_right_coords.npy  umap_SFint-FCMant_left_coords.npy  umap_SFint-FCMant_right_coords.npy  umap_SFint-SR_left_coords.npy  (+27 more)
(+57 files in other folders)
