[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "champollion-pipeline"
version = "0.2.11"
description = "End-to-end pipeline: raw T1 MRI → sulcal embeddings via cortical tiles and contrastive learning."
requires-python = ">=3.10"
license = { text = "CeCILL" }
authors = [{ name = "Neurospin", email = "barth.drabczuk@gmail.com" }]
dependencies = [
    "champollion-utils",
    "huggingface-hub>=0.20.0",
    "scipy>=1.10",
    "numpy>=1.24",
    "joblib>=1.3",
    "umap-learn>=0.5",
]

[project.urls]
Repository = "https://github.com/neurospin/champollion_pipeline"

[tool.hatch.build.targets.wheel]
# Only the installable library package — scripts in src/ are invoked via pixi run
packages = ["src/champollion_pipeline"]

[tool.ruff]
line-length = 120
exclude = [".pixi", "external"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "integration: slower integration tests",
    "smoke: minimal smoke tests",
]
